--- a/.github/workflows/schedule.yml
+++ b/.github/workflows/schedule.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - master
   schedule:
-    - cron: "0 0 0/6 1/1 * ? *"
+    - cron: "0 0/1 * 1/1 * ? *"
 jobs:
   update-gist:
     runs-on: ubuntu-latest
